# simdtests

./: CMakeLists.txt  LICENSE.md  README.md  optapp.cpp  optcore.h  optrgbhsv.cpp  optrgbhsv.h  simdglobals.h  simdrgbhsv.h  simdrgbhsv_ref.cpp  simdrgbhsv_sse2.cpp  simdtest.cpp
dejpeg/: dejpeg.h  dejpeg_ref.cpp  dejpeg_sse2.cpp  dejpeg_ssse3.cpp  dejpeg_test.cpp
depng/: depng.h  depng_ref.cpp  depng_sse2.cpp  depng_test.cpp
pixops/: pixops.h  pixops_ref.cpp  pixops_sse2.cpp  pixops_ssse3.cpp  pixops_test.cpp
rgbhsv/: rgbhsv.h  rgbhsv_ref.cpp  rgbhsv_sse2.cpp  rgbhsv_test.cpp
scripts/: configure-unix-makefiles-dbg.sh  configure-unix-makefiles-rel.sh  configure-win-mingw-dbg.bat  configure-win-mingw-rel.bat  configure-win-vs2005-x64.bat  configure-win-vs2005-x86.bat  configure-win-vs2008-x64.bat  configure-win-vs2008-x86.bat  configure-win-vs2010-x64.bat  configure-win-vs2010-x86.bat  configure-win-vs2013-x64.bat  configure-win-vs2013-x86.bat
src/: main.cpp  rgbhsv.cpp  rgbhsv.h  util.h
tools/: configure-win-vs2015-x64.bat  configure-win-vs2015-x86.bat
trigo/: trigo.h  trigo_ref.cpp  trigo_sse2.cpp  trigo_test.cpp
